# patlib

./: README.md  __init__.py  all.py  math.py  misc.py  plotting.py  pyproject.toml  setup.py  std.py
patlib/: __init__.py  all.py  math.py  misc.py  sci.py  std.py
tests/: test_patlib.py
