[tool.poetry]
name = "patlib"
version = "0.2.4"
description = "A collection of tools developed in conjunction with DAPPER."
license = "MIT"
authors = ["patricknraanes <patrick.n.raanes@gmail.com>"]

readme = "README.md"

#repository = "github..."
#repository = "github..."
#keywords = ["dict", "list"]

[tool.poetry.dependencies]
python = "^3.7"

# Minimal tools
line_profiler = "*"
ipdb = "*"
# This pdbpp rev includes bugfix to pdbpp/issues/408.
# As of Jan 2021, no release exists containing this bugfix.
#pdbpp = { git = "https://github.com/pdbpp/pdbpp.git", rev = "b62a338" }
pudb = "*"
ipython = "*"
jedi = "<0.18" # ipython/issues/12740
see = "*"

# math
matplotlib = { version = "*"        , optional = true }
pyqt5      = { version = "==5.15.2" , optional = true } # 5.15.3 breaks pyplot on mac
scipy      = { version = "*"        , optional = true }
numpy      = { version = "^1.20.1"  , optional = true } # 1.20 has stubs

# misc
pyyaml   = { version = "*", optional = true }
toml     = { version = "*", optional = true }
tabulate = { version = "*", optional = true }
tqdm     = { version = "*", optional = true }

# pat
#mpl_tools = "*"
#struct-tools = "*"
# pip is not able to install patlib in develop (-e) mode (atm).
# Even w/o develop mode, the dependencies cannot be local.
# Therefore this must be enabled only temporarily:
mpl-tools = { path = "../../py/mpl-tools/", develop=true }
struct-tools = { path = "../../py/struct-tools/" , develop=true }


#jupyter  = { version = "*", optional = true }

[tool.poetry.dev-dependencies]

#pre-commit = "*"

[tool.poetry.extras]
math = ["matplotlib", "pyqt5", "scipy", "numpy"]
misc = ["pyyaml", "toml", "tabulate", "tqdm"]
pat  = ["mpl-tools", "struct-tools"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
